data/derived/fa15/progs/unify/prog3765.ml.out
Characters 154-157:
  | Sine sin -> Printf.printf ("sin(pi*%s)" ^ sin);
                                              ^^^
Error: This expression has type expr but an expression was expected of type
         string
